began work on header

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -8,6 +8,7 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-2"></div>
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -27,6 +28,7 @@
                     </div>
                 </div>
                 {% endfor %}
+                <div class="col-sm-2"></div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
