--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <!-- <div class="intro-lead-in">Quality Above All</div> -->
+                <div class="intro-heading">Professional Home Repair</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
