--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -291,6 +291,7 @@ header .intro-text {
     width: 100%;
     max-height: 100vh;
     max-width: 100%;
+    margin-top: 30px;
 }
 
 header .intro-text .intro-heading {
